--- a/src/apresentacao/FrmCadCurso.form
+++ b/src/apresentacao/FrmCadCurso.form
@@ -160,12 +160,12 @@
                       <Component id="TxtModal" alignment="3" max="32767" attributes="0"/>
                       <Component id="txtHabilit" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel1" alignment="3" min="-2" pref="17" max="-2" attributes="0"/>
-                      <Group type="102" alignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="5" pref="5" max="-2" attributes="0"/>
                           <Component id="jLabel5" pref="0" max="32767" attributes="0"/>
                       </Group>
+                      <Component id="jLabel1" min="-2" pref="17" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
