--- a/src/apresentacao/FrmPrincipal.form
+++ b/src/apresentacao/FrmPrincipal.form
@@ -140,7 +140,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Principal"/>
+    <Property name="title" type="java.lang.String" value=" Sistema PPC - Principal"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
